--- a/legend-theme/sections/header.liquid
+++ b/legend-theme/sections/header.liquid
@@ -15,7 +15,7 @@
     <!-- Right: Search and Cart -->
     <div class="nav-right">
       <a href="/search" class="icon">🔍</a>
-      <a href="/cart" class="icon">{% render 'icon-cart' %}</a>
+      <a href="/cart" class="icon">{% render  %}</a>
     </div>
   </div>
 </header>
