--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
   </head>
   <body>
-    {% section 'header' %}
+    {% section 'main-header' %}
     {{ content_for_layout }}
     {% section 'footer' %}
   </body>
