--- a/sections/main-header.liquid
+++ b/sections/main-header.liquid
@@ -21,7 +21,7 @@
 
     <!-- Right: Search and Cart -->
     <div class="nav-right">
-      <a href="/cart" class="icon">{% render icon-cart %}</a>
+      <a href="/cart" class="icon">{% render 'icon-cart'%}</a>
     </div>
   </div>
 </header>
