--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -6,10 +6,18 @@
     <title>{{ page_title }}</title>
     {{ content_for_header }}
     <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
-  </head>
-  <body>
-    {% section 'main-header' %}
-    {{ content_for_layout }}
-    {% section 'footer' %}
+    
+    </head>
+    <body>
+      
+      {% section 'main-header' %}
+      {{ content_for_layout }}
+      {% section 'footer' %}
+      {% comment %} <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+      <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> {% endcomment %}
+      <script defer src="{{ 'gsap.min.js' | asset_url }}"></script>
+      <script defer src="{{ 'ScrollTrigger.min.js' | asset_url }}"></script>
+      <script defer src="{{ 'navbar.js' | asset_url }}"></script>
+        
   </body>
 </html>
