--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,8 +15,8 @@
       {% section 'footer' %}
       {% comment %} <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
       <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> {% endcomment %}
-      <script defer src="{{ 'gsap.min.js' | asset_url }}"></script>
-      <script defer src="{{ 'ScrollTrigger.min.js' | asset_url }}"></script>
+      <script defer src="{{ 'gsap-core.js' | asset_url }}"></script>
+      <script defer src="{{ 'ScrollTrigger.js' | asset_url }}"></script>
       <script defer src="{{ 'navbar.js' | asset_url }}"></script>
         
   </body>
