--- a/assets/theme.css
+++ b/assets/theme.css
@@ -95,6 +95,8 @@ body {
     justify-content: center;
     gap: 40px;
     border-bottom: 2rem solid #ffff;
+    border-top: 2rem solid #ffff;
+
   }
   
   .icon-wrapper {
@@ -113,8 +115,8 @@ body {
   }
   
   .icon-item img {
-    width: 80px;
-    height: 80px;
+    width: 6rem;
+    height: 6rem;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #ddd;
