--- a/assets/theme.css
+++ b/assets/theme.css
@@ -102,7 +102,7 @@ body {
   .icon-wrapper {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 2rem; ;
   }
   
   .icon-item {
@@ -115,8 +115,8 @@ body {
   }
   
   .icon-item img {
-    width: 6rem;
-    height: 6rem;
+    width: 7rem;
+    height: 7 rem;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #ddd;
