--- a/assets/theme.css
+++ b/assets/theme.css
@@ -115,12 +115,13 @@ body {
   }
   
   .icon-item img {
-    width: 6rem;
-    height: 6rem;
+    width: 7rem;
+    height: 7rem;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #ddd;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
+    padding: 2px;
   }
   
   .icon-item:hover {
