--- a/sections/circular-grid.liquid
+++ b/sections/circular-grid.liquid
@@ -1,3 +1,5 @@
+{{ 'circular-grid.css' | asset_url | stylesheet_tag }}
+
 <section class="category-icons">
   <div class="icon-wrapper">
     {% for block in section.blocks %}
