done collection heading

--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -15,7 +15,7 @@
       "type": "text",
       "id": "title",
       "label": "Title",
-      "default": "Collection"
+      "default": " Heading Collection"
     }
   ],
   "presets": [
