--- a/sections/bestseller.liquid
+++ b/sections/bestseller.liquid
@@ -12,11 +12,13 @@
         <div class="product-card">
           <div class="image-carousel">
             {% for i in (1..6) %}
-              {% assign img = block.settings["image_" | append: i ] %}
+              {% assign image_key = "image_" | append: i %}
+              {% assign img = block.settings[image_key] %}
               {% if img %}
                 <img src="{{ img | image_url: width: 300 }}" alt="Product Image {{ i }}" width="300" height="300" />
               {% endif %}
             {% endfor %}
+            
           </div>
           <h4>{{ block.settings.title }}</h4>
           <p class="price">{{ block.settings.price }}</p>
@@ -33,11 +35,13 @@
         <div class="product-card">
           <div class="image-carousel">
             {% for i in (1..6) %}
-              {% assign img = block.settings["image_" | append: i ] %}
+              {% assign image_key = "image_" | append: i %}
+              {% assign img = block.settings[image_key] %}
               {% if img %}
                 <img src="{{ img | image_url: width: 300 }}" alt="Product Image {{ i }}" width="300" height="300" />
               {% endif %}
             {% endfor %}
+            
           </div>
           <h4>{{ block.settings.title }}</h4>
           <p class="price">{{ block.settings.price }}</p>
