--- a/sections/bestseller.liquid
+++ b/sections/bestseller.liquid
@@ -19,9 +19,22 @@
               {% endif %}
             {% endfor %}
           </div>
-          <h4>{{ block.settings.title }}</h4>
-          <p class="price">{{ block.settings.price }}</p>
-          <p class="variant">{{ block.settings.variant }}</p>
+          <h4 style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}">
+            {{ block.settings.title }}
+          </h4>
+          <p
+            class="price"
+            style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}"
+          >
+            {{ block.settings.price }}
+          </p>
+          <p
+            class="variant"
+            style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}"
+          >
+            {{ block.settings.variant }}
+          </p>
+
           <button class="add-to-cart">{{ block.settings.button_text }}</button>
         </div>
       {% endif %}
@@ -41,9 +54,22 @@
               {% endif %}
             {% endfor %}
           </div>
-          <h4>{{ block.settings.title }}</h4>
-          <p class="price">{{ block.settings.price }}</p>
-          <p class="variant">{{ block.settings.variant }}</p>
+          <h4 style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}">
+            {{ block.settings.title }}
+          </h4>
+          <p
+            class="price"
+            style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}"
+          >
+            {{ block.settings.price }}
+          </p>
+          <p
+            class="variant"
+            style="color: {{ block.settings.text_color }}; font-family: {{ block.settings.font_family }}"
+          >
+            {{ block.settings.variant }}
+          </p>
+
           <button class="add-to-cart">{{ block.settings.button_text }}</button>
         </div>
       {% endif %}
@@ -53,8 +79,8 @@
 
 <script>
   function switchTab(id) {
-    document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-    document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+    document.querySelectorAll('.tab-button').forEach((btn) => btn.classList.remove('active'));
+    document.querySelectorAll('.tab-content').forEach((tab) => tab.classList.remove('active'));
     document.getElementById(id).classList.add('active');
     event.target.classList.add('active');
   }
@@ -83,6 +109,18 @@
           "type": "text",
           "id": "variant",
           "label": "Product Variant"
+        },
+        {
+          "type": "color",
+          "id": "text_color",
+          "label": "Text Color",
+          "default": "#000000"
+        },
+        {
+          "type": "font_picker",
+          "id": "font_family",
+          "label": "Font Family",
+          "default": "body"
         },
         {
           "type": "text",
@@ -117,6 +155,19 @@
           "id": "variant",
           "label": "Product Variant"
         },
+        {
+          "type": "color",
+          "id": "text_color",
+          "label": "Text Color",
+          "default": "#000000"
+        },
+        {
+          "type": "font_picker",
+          "id": "font_family",
+          "label": "Font Family",
+          "default": "body"
+        },
+
         {
           "type": "text",
           "id": "button_text",
