--- a/assets/bestseller.css
+++ b/assets/bestseller.css
@@ -52,6 +52,15 @@
   height: auto;
   margin-bottom: 10px;
 }
+.product-card h4 {
+  font-size: 1.2rem;
+  margin: 0;
+}
+.product-card p {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
 
 .product-card .price {
   font-weight: bold;
